# BankApp

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  adminwidget.cpp  adminwidget.h  loginwidget.cpp  loginwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  protocolutils.cpp  protocolutils.h  tcpclient.cpp  tcpclient.h  transferwidget.cpp  transferwidget.h
docs/: DEVELOPMENT.md
server/: CMakeLists.txt  database.cpp  database.h  main.cpp  metricsmanager.h  protocolutils.cpp  protocolutils.h  snowflake.h  tcpreactor.cpp  tcpreactor.h  worktask.cpp  worktask.h
server/controller/: accountcontroller.cpp  accountcontroller.h  admincontroller.cpp  admincontroller.h  transactioncontroller.cpp  transactioncontroller.h  usercontroller.cpp  usercontroller.h
server/dao/: accountdao.cpp  accountdao.h  transactiondao.cpp  transactiondao.h  userdao.cpp  userdao.h
server/service/: accountservice.cpp  accountservice.h  adminservice.cpp  adminservice.h  transactionservice.cpp  transactionservice.h  userservice.cpp  userservice.h
